change in the admin role

--- a/UI (Angular)/src/app/myComponent/friend-list/friend-list.component.html
+++ b/UI (Angular)/src/app/myComponent/friend-list/friend-list.component.html
@@ -58,12 +58,22 @@
         <td rowspan="2" style="width: 20%;">
           <img src="{{friend?.profilePicture}}" style="width: 100%;">
         </td>
-        <td colspan="1">
+        <td *ngIf="is_admin" colspan="2">
+          <H2>{{friend.name}}</H2>
+        </td>
+        <td *ngIf="is_admin==false" colspan="1">
           <H2>{{friend.name}}</H2>
         </td>
       </tr>
       <tr>
-        <td>
+        <td *ngIf="is_admin">
+          <button style="width: 100%; background-color: turquoise; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 32px; cursor: pointer;" (click)="addFriendButton(friend)">Add Friend</button>
+        </td>
+        <td *ngIf="is_admin">
+          <button style="width: 100%; background-color: red; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 32px; cursor: pointer;" (click)="removeThisUser(friend)">Remove User</button>
+        </td>
+
+        <td *ngIf="is_admin==false">
           <button style="width: 100%; background-color: turquoise; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 32px; cursor: pointer;" (click)="addFriendButton(friend)">Add Friend</button>
         </td>
         
