changed in session cookie in story

--- a/UI (Angular)/src/app/myComponent/story-reel/story-reel.component.html
+++ b/UI (Angular)/src/app/myComponent/story-reel/story-reel.component.html
@@ -12,7 +12,7 @@
         <label for="imageUploadStory">
         <img
           class="user__avatar story__avatar"
-          src="{{loginInfoForStoryReel?.profilePicture}}"
+          src="../../../assets/images/add_icon.png"
           alt=""
         />
         </label>
