--- a/UI (Angular)/src/app/myComponent/post/post.component.html
+++ b/UI (Angular)/src/app/myComponent/post/post.component.html
@@ -43,7 +43,7 @@
           <p>{{post.createdDate | date:'dd-MM-yyyy'}}</p>
         </div>
         <div *ngIf="is_admin">
-          <button style="background-color: red; margin-left: 440px; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 20px; cursor: pointer;" (click)="deleteThisPost(post)">Delete</button>
+          <button style="background-color: red; margin-left: 470px; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 20px; cursor: pointer;color: white;" (click)="deleteThisPost(post)">Delete</button>
         </div>
       </div>
 
@@ -95,7 +95,7 @@
             <p>{{post.createdDate | date:'dd-MM-yyyy'}}</p>
           </div>
           <div *ngIf="is_admin">
-            <button style="background-color: red; margin-left: 440px; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 20px; cursor: pointer;"(click)="deleteThisPost(post)">Delete</button>
+            <button style="background-color: red; margin-left: 470px; border: none; border-radius: 10px; color: #333; /* Dark grey */ padding: 15px 20px; cursor: pointer;color: white;"(click)="deleteThisPost(post)">Delete</button>
           </div>
         </div>
 
