--- a/UI (Angular)/src/app/myComponent/header/header.component.css
+++ b/UI (Angular)/src/app/myComponent/header/header.component.css
@@ -364,3 +364,14 @@
       padding: 10px 50px;
     }
   }
+
+  .notifications_active{
+  position: absolute;
+  top: 9px;
+  color: #fff;
+  font-size: 12px;
+  padding: 4px 4px 3px 4px;
+  background-color: #ff1e0e;
+  border-radius: 3px;
+  line-height: 1;
+  }
